--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
   "homepage": "https://github.com/ADONIIS1/Education_DACN#readme",
   "dependencies": {
     "@s-r0/eggy-js": "^1.3.4",
+    "apexcharts": "^3.29.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap-select": "^1.13.18",
+    "ckeditor5": "^30.0.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "fnon": "^1.1.6",
     "html-to-text": "^8.2.1",
     "jquery": "^3.6.1",
     "method-override": "^3.0.0",
@@ -35,14 +41,9 @@
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.3",
+    "nodemailer": "^6.6.5",
     "pdf-creator-node": "^2.3.5",
     "read-excel-file": "^5.5.3",
-    "ckeditor5": "^30.0.0",
-    "bootstrap-select": "^1.13.18",
-    "apexcharts": "^3.29.0",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^10.0.0",
-    "nodemailer": "^6.6.5",
     "socket.io": "^4.3.2"
   },
   "devDependencies": {
