--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ADONIIS1/Education_DACN.git"
+    "url": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git"
   },
   "author": "nhom8",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ADONIIS1/Education_DACN/issues"
+    "url": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git"
   },
-  "homepage": "https://github.com/ADONIIS1/Education_DACN#readme",
+  "homepage": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git",
   "dependencies": {
     "@s-r0/eggy-js": "^1.3.4",
     "apexcharts": "^3.29.0",
@@ -29,6 +29,7 @@
     "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -37,7 +38,7 @@
     "html-to-text": "^8.2.1",
     "jquery": "^3.6.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.4",
+    "mongoose": "^6.10.1",
     "mongoose-delete": "^0.5.4",
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
