--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git"
+    "url": "git+https://github.com/ADONIIS1/Education_DACN.git"
   },
   "author": "nhom8",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git"
+    "url": "https://github.com/ADONIIS1/Education_DACN/issues"
   },
-  "homepage": "https://github.com/Bimbb/Education-NodeJs-Handlebars.git",
+  "homepage": "https://github.com/ADONIIS1/Education_DACN#readme",
   "dependencies": {
     "@s-r0/eggy-js": "^1.3.4",
     "apexcharts": "^3.29.0",
